--- a/axum-server/src/index.html
+++ b/axum-server/src/index.html
@@ -4,51 +4,83 @@
 
 <head>
   <style>
-    /* .scroller { */
-    /* } */
+    @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;500&display=swap');
+    </style> 
+  <style>
     * {
-      outline: solid 1px red;
+      /* outline: solid 1px red; */
       overflow: hidden;
       white-space: nowrap;
       text-overflow: clip;
-      background-color: rgb(183, 0, 255);
+      background-color: rgb(145, 70, 255);
+    }
+
+    .row {
+      display: flex;
+      flex-flow: row nowrap;
+    }
+
+    img {
+      flex: 0 0 auto;
+    }
+
+    #title {
+      color: rgb(255, 255, 255);
+      font-family: 'Inter Tight', sans-serif;
+      font-weight: bold;
+      font-size: 50px;
     }
   </style>
+  
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;500&display=swap" rel="stylesheet"> -->
 
   <script type="text/javascript">
-    function WebSocketTest() {
-      // Let us open a web socket
-      var ws = new WebSocket("ws://localhost:9001");
+    function WebSocketClient() {
+      var ws = new WebSocket("ws://localhost:9005");
 
-      //  ws.onopen = function() {
-      //     // Web Socket is connected, send data using send()
-      //     ws.send("Message to send");
-      //     alert("Message is sent...");
-      //  };
+      let m = new Map();
+      m.set("KEKW", "https://cdn.betterttv.net/emote/5e9c6c187e090362f8b0b9e8/2x");
+      m.set("LULW", "https://cdn.betterttv.net/emote/5dc79d1b27360247dd6516ec/2x");
+      m.set("OMEGALUL", "https://cdn.betterttv.net/emote/583089f4737a8e61abb0186b/2x");
 
       ws.onmessage = function (evt) {
         var received_msg = evt.data;
-        // const node = document.createTextNode(received_msg);
-        document.getElementById("test").prepend(received_msg);
-      };
 
-      //  ws.onclose = function() { 
-      //     // websocket is closed.
-      //     alert("Connection is closed..."); 
-      //  };
+        const arr = received_msg.split(":");
+        const id = arr[0];
+        const emote = arr[1];
+
+        var node = document.createElement("img");
+        node.setAttribute("src", m.get(emote));
+        document.getElementById(id).prepend(node);
+
+      };
     }
 
-    window.onload = WebSocketTest();
+    window.onload = WebSocketClient();
   </script>
 
   <div id="sse">
-    <!-- <a href="javascript:WebSocketTest()">Run WebSocket asdf</a> -->
-    <p> Emotes Right Now</p>
+    <p id="title"> Twitch Right Now</p>
   </div>
 </head>
 
 <body>
-  <div class="scroller" id="test">
+  <div class="row">
+    <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/asmongold-profile_image-f7ddcbd0332f5d28-70x70.png">
+    <div class="scroller" id="asmongold"> </div>
+  </div>
+  <div class="row">
+    <img
+      src="https://static-cdn.jtvnw.net/jtv_user_pictures/996d2d80-c1c4-4dd7-99dd-074c47cf7196-profile_image-70x70.png">
+    <div class="scroller" id="payo"> </div>
+  </div>
+  <div class="row">
+    <img
+      src="https://static-cdn.jtvnw.net/jtv_user_pictures/9422718a-57f7-4b1f-8e8f-54906b407847-profile_image-70x70.png">
+    <div class="scroller" id="staysafetv"> </div>
   </div>
 </body>
 
