--- a/axum-server/src/index.html
+++ b/axum-server/src/index.html
@@ -8,7 +8,6 @@
   </style>
   <style>
     * {
-      /* outline: solid 1px red; */
       overflow: hidden;
       white-space: nowrap;
       text-overflow: clip;
@@ -42,17 +41,28 @@
   </style>
 
   <script type="text/javascript">
-    function WebSocketClient() {
-      var ws = new WebSocket("ws://localhost:9005");
+    
+    const serverURL = "ws://localhost:3000/websocket";
+    function openSocket(url) {
+      // open the socket:
+      socket = new WebSocket(url);
+      // socket.addEventListener('open', openConnection);
+      // socket.addEventListener('close', closeConnection);
+      // socket.addEventListener('message', readIncomingMessage);
+      WebSocketClient(socket);
+    }
+
+    function WebSocketClient(ws) {
+      // const ws = new WebSocket("ws://localhost:3000/websocket");
+      // const ws = new WebSocket("ws://localhost:9005");
 
       let m = new Map();
       m.set("KEKW", "https://cdn.betterttv.net/emote/5e9c6c187e090362f8b0b9e8/2x");
       m.set("LULW", "https://cdn.betterttv.net/emote/5dc79d1b27360247dd6516ec/2x");
       m.set("OMEGALUL", "https://cdn.betterttv.net/emote/583089f4737a8e61abb0186b/2x");
 
-      ws.onmessage = function (evt) {
+      ws.onmessage = (evt) => {
         var received_msg = evt.data;
-
         const arr = received_msg.split(":");
         const id = arr[0];
         const emote = arr[1];
@@ -61,7 +71,6 @@
         node.setAttribute("src", m.get(emote));
         node.setAttribute("id", "emote");
         document.getElementById(id).prepend(node);
-
       };
     }
 
@@ -86,10 +95,17 @@
       }
     }
 
-    window.onload = WebSocketClient();
-  </script>
+    // Sends a message over the websocket to the server to join this chat.
+    // function JoinChat(element) {
+    //   var chat = element.id.replace("button-", "");
+    //   ws.send(chat);
+    // }
+
+    window.addEventListener('load', openSocket(serverURL));  
+    </script>
 
   <div class="head-row">
+    <!-- <button id="join-chat" type="button" onclick="JoinChat('staysafetv');">Join Chat</button> -->
     <p id="title"> Twitch Right Now</p>
     <input type="image" id="button-asmongold"
       src="https://static-cdn.jtvnw.net/jtv_user_pictures/asmongold-profile_image-f7ddcbd0332f5d28-70x70.png"
@@ -97,7 +113,7 @@
     <input type="image" id="button-payo"
       src="https://static-cdn.jtvnw.net/jtv_user_pictures/996d2d80-c1c4-4dd7-99dd-074c47cf7196-profile_image-70x70.png"
       onclick="ToggleOpaque(this); ToggleRowById(this);" />
-    <input type="image" id="button-staysafetv" 
+    <input type="image" id="button-staysafetv"
       src="https://static-cdn.jtvnw.net/jtv_user_pictures/9422718a-57f7-4b1f-8e8f-54906b407847-profile_image-70x70.png"
       onclick="ToggleOpaque(this); ToggleRowById(this);" />
   </div>
