--- a/src/index.html
+++ b/src/index.html
@@ -42,16 +42,14 @@
 
   <script>
     const ws = new WebSocket('ws://localhost:3000/ws');
+    let m = new Map();
+    m.set("KEKW", "https://cdn.betterttv.net/emote/5e9c6c187e090362f8b0b9e8/2x");
+    m.set("LULW", "https://cdn.betterttv.net/emote/5dc79d1b27360247dd6516ec/2x");
+    m.set("OMEGALUL", "https://cdn.betterttv.net/emote/583089f4737a8e61abb0186b/2x");
 
     function WebSocketClient() {
-
-      let m = new Map();
-      m.set("KEKW", "https://cdn.betterttv.net/emote/5e9c6c187e090362f8b0b9e8/2x");
-      m.set("LULW", "https://cdn.betterttv.net/emote/5dc79d1b27360247dd6516ec/2x");
-      m.set("OMEGALUL", "https://cdn.betterttv.net/emote/583089f4737a8e61abb0186b/2x");
-
       ws.onmessage = function (evt) {
-        var received_msg = evt.data; 
+        var received_msg = evt.data;
         const arr = received_msg.split(":");
         const id = arr[0];
         const emote = arr[1];
@@ -73,7 +71,9 @@
 
     // element is the input(button) element
     function ToggleRowById(element) {
-      var rowId = element.id.replace("button-", "row-");
+      var stream = element.id.replace("button-", "");
+      ws.send(stream); // server alternates between joining and parting the channel.
+      var rowId = "row-" + stream;
       var x = document.getElementById(rowId);
       if (x.style.display == "flex") {
         x.style.display = "none";
@@ -84,9 +84,6 @@
       }
     }
 
-    function JoinChat(chat) {
-      ws.send(chat);
-    }
     window.addEventListener('load', WebSocketClient);  
   </script>
 
@@ -94,13 +91,13 @@
     <p id="title"> Twitch Right Now</p>
     <input type="image" id="button-asmongold"
       src="https://static-cdn.jtvnw.net/jtv_user_pictures/asmongold-profile_image-f7ddcbd0332f5d28-70x70.png"
-      onclick="ToggleOpaque(this); ToggleRowById(this); JoinChat('asmongold');" />
+      onclick="ToggleOpaque(this); ToggleRowById(this);" />
     <input type="image" id="button-payo"
       src="https://static-cdn.jtvnw.net/jtv_user_pictures/996d2d80-c1c4-4dd7-99dd-074c47cf7196-profile_image-70x70.png"
-      onclick="ToggleOpaque(this); ToggleRowById(this); JoinChat('payo');;" />
+      onclick="ToggleOpaque(this); ToggleRowById(this);" />
     <input type="image" id="button-staysafetv"
       src="https://static-cdn.jtvnw.net/jtv_user_pictures/9422718a-57f7-4b1f-8e8f-54906b407847-profile_image-70x70.png"
-      onclick="ToggleOpaque(this); ToggleRowById(this); JoinChat('staysafetv');" />
+      onclick="ToggleOpaque(this); ToggleRowById(this);" />
   </div>
 </head>
 
